// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff E2E > generates different images 1`] = `
{
  "height": 10,
  "score": 0.37,
  "width": 10,
}
`;

exports[`diff E2E > generates different sizes images 1`] = `
{
  "height": 15,
  "score": 0.515555555556,
  "width": 15,
}
`;

exports[`diff E2E > generates images with big diff 1`] = `
{
  "height": 4469,
  "score": 0.80979950772,
  "width": 1000,
}
`;

exports[`diff E2E > takes into account colors in comparison 1`] = `
{
  "height": 10,
  "score": 1,
  "width": 10,
}
`;

exports[`diff E2E > works with large size image 1`] = `
{
  "height": 13358,
  "score": 0.233825506147,
  "width": 900,
}
`;
